--- a/.github/workflows/trigger-helm-umbrella.yaml
+++ b/.github/workflows/trigger-helm-umbrella.yaml
@@ -8,6 +8,7 @@ jobs:
   trigger:
     name: Trigger Workflows
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     env:
       ORG_NAME: BahmniIndiaDistro
       REPOSITORY_NAME: helm-umbrella-chart
